<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/tv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        app:cardCornerRadius="@dimen/margin_normal"
        app:contentPadding="@dimen/margin_normal"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/tv_image_frame"
                android:layout_width="@dimen/width_image"
                android:layout_height="@dimen/height_image"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/tv_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/tv_image_loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="@dimen/no_margin"
                android:layout_height="wrap_content"
                android:theme="@style/TitleFormat"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_image_frame"
                app:layout_constraintTop_toTopOf="@+id/tv_image_frame" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="@dimen/no_margin"
                android:layout_height="wrap_content"
                android:theme="@style/DateFormat"
                android:layout_below="@+id/tv_title"
                android:layout_marginTop="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="@dimen/no_margin"
                android:layout_height="wrap_content"
                android:theme="@style/OverviewFormat"
                android:layout_below="@+id/tv_date"
                android:layout_marginTop="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="@+id/tv_date"
                app:layout_constraintStart_toStartOf="@+id/tv_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_date" />

            <RatingBar
                android:id="@+id/tv_rating_star"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/margin_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_overview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>